small ui changes

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,14 +1,11 @@
 .background {
-  background-color: black;
-  background-image: url('/images/background.jpg');
+  /*background-color: black;*/
+  background: url('/images/background.jpg') center center fixed;
   background-repeat: no-repeat;
   background-size: cover;
   min-width: 100%;
   min-height: 100%;
   position: fixed;
-  outline-style: double;
-  outline-width: 10px;
-  outline-color: green;
   border: 10px solid;
   border-image-source: url("/images/border.jpg");
   border-image-width: 2 0 10 0;
