--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,32 +1,20 @@
 .background {
-  /*background-color: black;*/
-  background: url('/images/background.jpg') center center fixed;
-  background-repeat: no-repeat;
+  background: url('/images/background.jpg') no-repeat;
   background-size: cover;
   min-width: 100%;
   min-height: 100%;
   position: fixed;
-  border: 10px solid;
-  border-image-source: url("/images/border.jpg");
-  border-image-width: 2 0 10 0;
-  border-image-slice: 20% 0 100% 0;
-  border-image-repeat: round round;
-  color: white;
+  outline: 15px ridge green;
   font-family: monospace;
-  overflow: scroll;
-}
-
-.menu {
-  background-color: black;
-  color: white;
-  box-shadow: 10px 10px 5px grey;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem; /* Footer height */
+  border-width: 0px 0px 10px 0px;
+  border-style: solid;
+  border-image-source: url("/images/border.jpg");
+  border-image-slice: 20% 0 100% 0;
+  border-image-width: 0 0 10 0;
+  border-image-repeat: round round;
 }
 
 html {
